web-emu: Fix display sizing on mobile

--- a/module/web-emu/styles/emulator.scss
+++ b/module/web-emu/styles/emulator.scss
@@ -55,7 +55,9 @@ main {
 			flex-direction: column;
 
 			.emulator-interface {
-				height: 100%;
+				flex-grow: 2;
+				flex-shrink: 0;
+				height: calc(100% - #{$header-height + $toolbar-height + 2});
 			}
 
 			.emulator-debugger {
